--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "cors": "^2.8.5",
+    "dotenv": "^16.0.3",
     "ethers": "^6.3.0",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
